# JIRA_Contextualization

./: .gitignore  README.md  pyproject.toml
data/raw/: HP-Jira 2026-03-26T12_36_05+0000.csv
docs/: architecture_diagram.html
src/jira_contextualization/: __init__.py  flow.py  main.py
src/jira_contextualization/config/: agents.yaml  tasks.yaml
src/jira_contextualization/crews/: __init__.py
src/jira_contextualization/crews/consolidation_crew/: __init__.py  consolidation_crew.py
src/jira_contextualization/crews/consolidation_crew/config/: agents.yaml  tasks.yaml
src/jira_contextualization/crews/extraction_crew/: __init__.py  extraction_crew.py
src/jira_contextualization/crews/extraction_crew/config/: agents.yaml  tasks.yaml
src/jira_contextualization/crews/validation_crew/: __init__.py  validation_crew.py
src/jira_contextualization/crews/validation_crew/config/: agents.yaml  tasks.yaml
src/jira_contextualization/models/: __init__.py  consolidation.py  extraction.py  normalized_issue.py  project_knowledge.py  structured_knowledge.py  validation_report.py
src/jira_contextualization/tools/: __init__.py  csv_parser.py  knowledge_publisher.py  knowledge_validator.py  llm_utils.py  relationship_builder.py  requirement_extractor.py  wiki_markup_parser.py
