[project]
name = "jira-contextualization"
version = "1.0.0"
description = "AI-powered Jira Contextualization Engine — transforms raw Jira tickets into structured, validated, reusable knowledge bases using CrewAI multi-agent pipelines."
authors = [{ name = "Aryan Nishen", email = "aryannishen27@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    # ── CrewAI (core orchestration) ──────────────────────────────────
    "crewai[google-genai]>=0.120.0",
    "crewai-tools>=0.40.0",
    # ── LLM Providers ────────────────────────────────────────────────
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",
    # ── Data Processing ──────────────────────────────────────────────
    "pydantic>=2.0",
    "python-dotenv>=1.2.0",
    # ── Utilities ────────────────────────────────────────────────────
    "rich>=13.0",
]

[project.scripts]
jira_ctx = "jira_contextualization.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jira_contextualization"]
